--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
-        "pusher/pusher-php-server": "3.0"
+        "mollie/laravel-mollie": "^2.15",
+        "pusher/pusher-php-server": "^5.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
