--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/ui": "^3.3",
         "mollie/laravel-mollie": "^2.15",
         "predis/predis": "^2.3",
-        "pusher/pusher-php-server": "^7.0"
+        "pusher/pusher-php-server": "^5.0",
+        "srmklive/paypal": "^3.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
